Upgrade JAXWS version