@@ -8,54 +8,42 @@ Le service web développé dans ce dépôt contient deux opérations qui retourn
 
 ### Comment compiler
 
-* À la racine du projet, exécuter la ligne de commande suivante :
+* Lancer la compilation et la création du fichier _.jar_ :
 
 ```bash
-mvn clean package
+$ mvn clean package
 ```
 
 ### Comment exécuter
 
-* Toujours depuis la racine du projet, exécuter la ligne de commande suivante :
+* Éxecuter le programme Java en ajoutant toutes les dépendances nécessaires :
 
 ```bash
 $ java -cp "target/classes:target/dependency/*" fr.mickaelbaron.helloworldwebservice.HelloWorldServiceSOAPPublish
-...
-WARNING: An illegal reflective access operation has occurred
-WARNING: Illegal reflective access by com.sun.xml.bind.v2.runtime.reflect.opt.Injector (file:/Users/baronm/workspacepersowebserviceslabs/jaxws-helloworldwebservice/target/dependency/jaxb-impl-2.3.0.1.jar) to method java.lang.ClassLoader.defineClass(java.lang.String,byte[],int,int)
-WARNING: Please consider reporting this to the maintainers of com.sun.xml.bind.v2.runtime.reflect.opt.Injector
-WARNING: Use --illegal-access=warn to enable warnings of further illegal reflective access operations
-WARNING: All illegal access operations will be denied in a future release
-```
-
-> Pour éviter l'avertissement d'un accès par réflexivité de la dépendance _jaxb-impl-x.y.z.jar_ à un module de la JDK, vous pouvez ajouter l'option `com.sun.xml.bind.v2.bytecode.ClassTailor.noOptimize=true`. Cette option désactive une optimisation de performance qui sera supprimée dans la prochaine version de la bibliothèque.
-
-```bash
-java -Dcom.sun.xml.bind.v2.bytecode.ClassTailor.noOptimize=true -cp "target/classes:target/dependency/*" fr.mickaelbaron.helloworldwebservice.HelloWorldServiceSOAPPublish
 ```
 
 ## Générer un WAR et déployer ce WAR vers un serveur d'application
 
 ### Comment compiler
 
-* À la racine du projet, exécuter la ligne de commande suivante pour générer le fichier _.war_
+* Lancer la compilation et la création du fichier _.war_ en utilisant le profile `war` : 
 
 ```bash
-mvn clean package -P war
+$ mvn clean package -P war
 ```
 
 ### Comment déployer
 
-* Exécuter la ligne de commande suivante pour télécharger l'image Docker correspondant à la version 9 de Tomcat s'exécutant sous un JRE 11
+* Télécharger l'image Docker Tomcat s'exécutant sous un JRE 11 :
 
 ```bash
-docker pull tomcat:9-jre11-slim
+$ docker pull tomcat:jre11-openjdk-slim
 ```
 
-* Exécuter la ligne de commande suivante permettant de créer un conteneur Docker
+* Créer un conteneur Docker :
 
 ```bash
-docker run --rm --name helloworldservice-tomcat -v $(pwd)/target/helloworldwebservice.war:/usr/local/tomcat/webapps/helloworldwebservice.war -it -p 8080:8080 tomcat:9-jre11-slim
+$ docker run --rm --name helloworldservice-tomcat -v $(pwd)/target/helloworldwebservice.war:/usr/local/tomcat/webapps/helloworldwebservice.war -it -p 8080:8080 tomcat:jre11-openjdk-slim
 ```
 
 ## Tester
