@@ -8,10 +8,10 @@ Le service web appelé fait référence au projet [jaxws-notebookwebservice](htt
 
 * Compiler et exécuter le projet [jaxws-notebookwebservice](https://github.com/mickaelbaron/jaxws-notebookwebservice). Voir le fichier README.md associé au dépôt pour plus de détails. Pour information, l'adresse d'invocation du service web sera fixée à `http://localhost:8080/notebookwebservice/notebook`.
 
-* À la racine du projet, exécuter la ligne de commande suivante :
+* Lancer la compilation et la création du fichier _.jar_ :
 
 ```bash
-mvn clean package
+$ mvn clean package
 ```
 
 ## Comment exécuter
@@ -22,19 +22,4 @@ mvn clean package
 
 ```bash
 $ java -cp "target/classes:target/dependency/*" fr.mickaelbaron.notebookwebserviceasyncclient.NotebookServiceAsyncClient
-...
-WARNING: An illegal reflective access operation has occurred
-WARNING: Illegal reflective access by com.sun.xml.bind.v2.runtime.reflect.opt.Injector (file:/Users/baronm/workspacepersowebserviceslabs/jaxws-notebookwebserviceasyncclient/target/dependency/jaxb-impl-2.3.0.1.jar) to method java.lang.ClassLoader.defineClass(java.lang.String,byte[],int,int)
-WARNING: Please consider reporting this to the maintainers of com.sun.xml.bind.v2.runtime.reflect.opt.Injector
-WARNING: Use --illegal-access=warn to enable warnings of further illegal reflective access operations
-WARNING: All illegal access operations will be denied in a future release
-true
-```
-
-> Pour éviter l'avertissement d'un accès par réflexivité de la dépendance _jaxb-impl-x.y.z.jar_ à un module de la JDK, vous pouvez ajouter l'option `com.sun.xml.bind.v2.bytecode.ClassTailor.noOptimize=true`. Cette option désactive une optimisation de performance qui sera supprimée dans la prochaine version de la bibliothèque.
-
-```bash
-$ java -Dcom.sun.xml.bind.v2.bytecode.ClassTailor.noOptimize=true -cp "target/classes:target/dependency/*" fr.mickaelbaron.notebookwebserviceasyncclient.NotebookServiceAsyncClient
-...
-true
 ```
